2005-01-05  John Sullivan  <john@wjsullivan.net>

	* delicious.el (delicious-w3m-html): Interactive function to visit
	a user's delicious HTML link page in w3m.

	* delicioapi.el (delicious-api-html-uri): Pulled uri assembling
	bit out of (delicious-api-html) into a separate function to
	facilitate use with external programs like w3m.
	(delicious-api-html-tagsep): Fixed tagsep default error.
	(delicious-api-html-uri): Working on improving handling of empty
	and nil arguments.

	* delicious.el (delicious-version): Added separate version string
	for `delicious.el'.

2005-01-04  John Sullivan  <john@wjsullivan.net>

	* README: Added brief blurb about delicious-api-html.
	Added noninteractive functions section. Fleshed out description of
	parameters for the HTML feed.


	* delicioapi.el (delicious-api-html): Removed extraneous comments.
	(delicious-api-html-count): Added defcustom statements for all of
	the HTML parameters so that you can set defaults to use.
	(delicious-api-html): Hacked use of defcustom defaults into long
	argument list. This will get neater, I promise.

2005-01-03  John Sullivan  <john@wjsullivan.net>

	* delicioapi.el (delicious-api-html): Fixed a
	parentheses-oops. Added code to retrieve and return the HTML list
	from the DELICIOUS-API-BUFFER after contacting the server. I'm
	doing this in a very primitive way, but it seems to work so
	far. Function is not yet documented.

2004-12-30  John Sullivan  <john@wjsullivan.net>

                * delicioapi.el (delicious-api-html): Fixed up logic to construct
                the URL for requesting the HTML tags list. 

2004-12-25  John Sullivan  <john@wjsullivan.net>

	* delicioapi.el (delicious-api-build-html-request): Added separate
	function to handle fetching HTML feed requests, because these
	requests use a different address.
	(General): Tried to fix whitespace and indentation issues.
	(delicious-api-html): New variable to hold URL path for del.icio.us
	HTML feed.
