@@ -213,7 +213,7 @@
        (extended (url-hexify-string extended))
        (time (url-hexify-string time))
        (post-url (format "posts/add?&url=%s&description=%s&tags=%s&extended=%s&dt=%s"
-			 url description tags extended time)))
+                         url description tags extended time)))
   (delicious-send-request (delicious-build-request post-url))))
 
 (defun delicious-api-get-tags ()
@@ -256,10 +256,10 @@
 (defun delicious-api-get-posts (&optional tag date)
 "Return a list of posts filtered by TAG on a given DATE.  If no date is supplied, the most recent date with posts will be used.  The list is HREF, DESCRIPTION, HASH, TAG, and TIME."
 (let* ((uri (concat "posts/get?"
-		    (unless (null tag)
-		      (format "&tag=%s" tag))
-		    (unless (null date)
-		      (format "&dt=%s" date))))
+                    (unless (null tag)
+                      (format "&tag=%s" tag))
+                    (unless (null date)
+                      (format "&dt=%s" date))))
        (search (delicious-build-search "href" "description" "hash" "tag" "time")))
   (delicious-send-request (delicious-build-request uri))
   (delicious-do-search-list (car search) (cdr search))))
@@ -269,10 +269,10 @@
 (let* ((tag (unless (null tag) (url-hexify-string tag)))
        (count (if (> count 100) 100) count)
        (uri (concat "posts/recent?"
-		    (unless (null tag)
-		      (format "&tag=%s" tag))
-		    (unless (null count)
-		      (format "&count=%s" count))))
+                    (unless (null tag)
+                      (format "&tag=%s" tag))
+                    (unless (null count)
+                      (format "&count=%s" count))))
        (search (delicious-build-search "href" "description" "hash" "tag" "time")))
   (delicious-send-request (delicious-build-request uri))
   (delicious-do-search-list (car search) (cdr search))))
@@ -289,8 +289,8 @@
 TAG is a tag to filter by.  The dates are the keys."
 (let* ((tag (url-hexify-string tag))
        (uri (concat "posts/dates?"
-		    (unless (null tag)
-		      (format "&tag=%s" tag))))
+                    (unless (null tag)
+                      (format "&tag=%s" tag))))
        (search (delicious-build-search "count" "date")))
   (delicious-send-request (delicious-build-request uri))
   (delicious-do-search-hash (car search) 2)))
@@ -342,13 +342,13 @@ for EXTENDEDDIV."
 (save-excursion
   (with-current-buffer delicious-api-buffer
     (let ((beginning (progn
-		       (goto-char (point-min))
-		       (re-search-forward "<div")
-		       (line-beginning-position)))
-	  (end (progn
-		 (goto-char (point-max))
-		 (re-search-backward "</a>")
-		 (line-end-position))))
+                       (goto-char (point-min))
+                       (re-search-forward "<div")
+                       (line-beginning-position)))
+          (end (progn
+                 (goto-char (point-max))
+                 (re-search-backward "</a>")
+                 (line-end-position))))
       (buffer-substring beginning end)))))
 
 (defun delicious-api-html-uri 
@@ -373,49 +373,49 @@ button.  EXTENDEDDIV is an extended entry in its own div.  If it is nil, don't
 use it.  If it is non-nil, do something.  EXTENDEDCLASS is a CSS class to use
 for EXTENDEDDIV."
   (let* ((user (if (not (or (null username) (equal username "")))
-		   username
-		 delicious-api-user))
-	 (uri (substring (concat (format "%s/?" user)
-				 (if (not (or (null tagname) (equal tagname "")))
-				     (format "%s?" tagname))
-				 (if (not (or (null count) (equal count "")))
-				     (format "count=%s&" count)
-				   (format "count=%s&" delicious-api-html-count))
-				 (if (not (null extended))
-				     (format "extended=%s&" extended)
-				   (format "extended=%s&" delicious-api-html-extended))
-				 (if (not (null divclass))
-				     (format "divclass=%s&" divclass)
-				   (format "divclass=%s&" delicious-api-html-divclass))
-				 (if (not (null aclass))
-				     (format "aclass=%s&" aclass)
-				   (format "aclass=%s&" delicious-api-html-aclass))
-				 (if (not (null tags))
-				     (format "tags=%s&" tags)
-				   (format "tags=%s&" delicious-api-html-tags))
-				 (if (not (null tagclass))
-				     (format "tagclass=%s&" tagclass)
-				   (format "tagclass=%s&" delicious-api-html-tagclass))
-				 (if (not (null tagsep))
-				     (format "tagsep=%s&" tagsep)
-				   (format "tagsep=%s&" delicious-api-html-tagsep))
-				 (if (not (null tagsepclass))
-				     (format "tagsepclass=%s&" tagsepclass)
-				   (format "tagsepclass=%s&" delicious-api-html-tagsepclass))
-				 (if (not (null bullet))
-				     (format "bullet=%s&" bullet)
-				   (format "bullet=%s&" delicious-api-html-bullet))
-				 (if (not (null rssbutton))
-				     (format "rssbutton=%s&" rssbutton)
-				   (format "rssbutton=%s&" delicious-api-html-rssbutton))
-				 (if (not (null extendeddiv))
-				     (format "extendeddiv=%s&" extendeddiv)
-				   (format "extendeddiv=%s&" delicious-api-html-extendeddiv))
-				 (if (not (null extendedclass))
-				     (format "extendedclass=%s&" extendedclass)
-				   (format "extendedclass=%s&" delicious-api-html-extendedclass)))
-			 0 -1)))
-    uri)))
+                   username
+                 delicious-api-user))
+         (uri (substring (concat (format "%s/?" user)
+                                 (if (not (or (null tagname) (equal tagname "")))
+                                     (format "%s?" tagname))
+                                 (if (not (or (null count) (equal count "")))
+                                     (format "count=%s&" count)
+                                   (format "count=%s&" delicious-api-html-count))
+                                 (if (not (null extended))
+                                     (format "extended=%s&" extended)
+                                   (format "extended=%s&" delicious-api-html-extended))
+                                 (if (not (null divclass))
+                                     (format "divclass=%s&" divclass)
+                                   (format "divclass=%s&" delicious-api-html-divclass))
+                                 (if (not (null aclass))
+                                     (format "aclass=%s&" aclass)
+                                   (format "aclass=%s&" delicious-api-html-aclass))
+                                 (if (not (null tags))
+                                     (format "tags=%s&" tags)
+                                   (format "tags=%s&" delicious-api-html-tags))
+                                 (if (not (null tagclass))
+                                     (format "tagclass=%s&" tagclass)
+                                   (format "tagclass=%s&" delicious-api-html-tagclass))
+                                 (if (not (null tagsep))
+                                     (format "tagsep=%s&" tagsep)
+                                   (format "tagsep=%s&" delicious-api-html-tagsep))
+                                 (if (not (null tagsepclass))
+                                     (format "tagsepclass=%s&" tagsepclass)
+                                   (format "tagsepclass=%s&" delicious-api-html-tagsepclass))
+                                 (if (not (null bullet))
+                                     (format "bullet=%s&" bullet)
+                                   (format "bullet=%s&" delicious-api-html-bullet))
+                                 (if (not (null rssbutton))
+                                     (format "rssbutton=%s&" rssbutton)
+                                   (format "rssbutton=%s&" delicious-api-html-rssbutton))
+                                 (if (not (null extendeddiv))
+                                     (format "extendeddiv=%s&" extendeddiv)
+                                   (format "extendeddiv=%s&" delicious-api-html-extendeddiv))
+                                 (if (not (null extendedclass))
+                                     (format "extendedclass=%s&" extendedclass)
+                                   (format "extendedclass=%s&" delicious-api-html-extendedclass)))
+                         0 -1)))
+    uri))
   
 (defun delicious-api-build-html-request (uri)
   "Return the proper HTTP request to get URI from the HTML feed."
