@@ -1,3 +1,7 @@
+2005-01-06  John Sullivan  <john@wjsullivan.net>
+
+	* delicioapi.el (delicious-api-html-uri): Parentheses oops.
+
 2005-01-05  John Sullivan  <john@wjsullivan.net>
 
 	* delicious.el (delicious-w3m-html): Interactive function to visit
